# tenderwriter

./: .env.example  LICENSE  LOCAL_CHECKLIST.md  README.md  backend_docker_logs.txt  backend_logs.txt  docker-compose.yml  logs.txt
backend/: .dockerignore  Dockerfile  e2e_verify.py  pyproject.toml  test_pdf_upload.py  verify_imports.py
backend/app/: check_db_schema.py  check_users.py  clean_db.py  config.py  delete_user.py  main.py  test_reg.py
backend/app/api/: auth.py  content_library.py  proposals.py  rag.py  system.py  tenders.py
backend/app/db/: database.py
backend/app/ingestion/: pipeline.py
backend/app/models/: __init__.py
backend/app/rag/: __init__.py  chunker.py  dense_retriever.py  embedder.py  engine.py  fusion.py  generator.py  graph_retriever.py  reranker.py  sparse_retriever.py
backend/tenderwriter_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ContentLibrary.tsx  Dashboard.tsx  Login.tsx  ProposalEditor.tsx  Register.tsx  Search.tsx  Settings.tsx  SystemMonitor.tsx
resoningfromagentic/: Debugging User Registration.md  Fixing CSP 'unsafe-eval' Issue.md  analisi-flusso-pdf-rag.md  cronologia-28-02-2026.md  cronologia-completa-progetto.md  cronologia-iterazioni-29-02-2026.md  frontend_pdf_upload.md  implementation_plan.md.resolved  rag_flow_analysis.md  task.md.resolved  task.md2.resolved  walkthrough.md.resolved  walkthrough2.md  walkthrough3.md.resolved
